tests/baselines/reference/for-of31.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of31.ts(1,15): error TS2322: Type 'StringIterator' is not assignable to type 'Iterable<string>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => StringIterator' is not assignable to type '() => Iterator<string>'.
      Signature '(): Iterator<string>' has no corresponding signature in '() => StringIterator'
        Type 'StringIterator' is not assignable to type 'Iterator<string>'.
          Types of property 'next' are incompatible.
            Type '() => { value: string; }' is not assignable to type '(value?: any) => IteratorResult<string>'.
              Signature '(value?: any): IteratorResult<string>' has no corresponding signature in '() => { value: string; }'
                Type '{ value: string; }' is not assignable to type 'IteratorResult<string>'.
                  Property 'done' is missing in type '{ value: string; }'.


==== tests/cases/conformance/es6/for-ofStatements/for-of31.ts (1 errors) ====
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'StringIterator' is not assignable to type 'Iterable<string>'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '() => StringIterator' is not assignable to type '() => Iterator<string>'.
!!! error TS2322:       Signature '(): Iterator<string>' has no corresponding signature in '() => StringIterator'
!!! error TS2322:         Type 'StringIterator' is not assignable to type 'Iterator<string>'.
!!! error TS2322:           Types of property 'next' are incompatible.
!!! error TS2322:             Type '() => { value: string; }' is not assignable to type '(value?: any) => IteratorResult<string>'.
!!! error TS2322:               Signature '(value?: any): IteratorResult<string>' has no corresponding signature in '() => { value: string; }'
!!! error TS2322:                 Type '{ value: string; }' is not assignable to type 'IteratorResult<string>'.
!!! error TS2322:                   Property 'done' is missing in type '{ value: string; }'.
    
    class StringIterator {
        next() {
            return {
                // no done property
                value: ""
            }
        }
        
        [Symbol.iterator]() {
            return this;
        }
    }